--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,3 +3,10 @@ trigger:
 
 pool:
   vmImage: 'ubuntu-latest'
+
+variables:
+  buildConfiguration: 'Release'
+
+steps:
+- script: dotnet build --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
